[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ClientManager.gd" type="Script" id=2]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="chatInputBox" type="TextEdit" parent="."]
anchor_right = 0.35
margin_left = 300.0
margin_top = 380.0
margin_right = 640.0
margin_bottom = 440.0

[node name="receiveChatBox" type="RichTextLabel" parent="."]
margin_left = 329.451
margin_top = 249.436
margin_right = 616.451
margin_bottom = 378.436

[node name="sendChatButton" type="Button" parent="."]
margin_left = 645.0
margin_top = 375.0
margin_right = 732.0
margin_bottom = 442.0
text = "send chat"

[node name="ClientManager" type="Node" parent="."]
script = ExtResource( 2 )
